src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>HubSpot_India_Date_Created_in_CCHQ__c</fullName>
        <label>HubSpot - India Date Created in CCHQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Last_Contacted__c</fullName>
        <label>HubSpot - Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HubSpot_Meets_old_SQL_definition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When an old SQL submitted the demo page form but did not schedule a call, this will be checked yes.</description>
        <label>HubSpot - Meets old SQL definition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Number_of_project_spaces__c</fullName>
        <label>HubSpot - Number of project spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Opt_Into_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the user select: Opt into emails about new features and other CommCare updates.</description>
        <inlineHelpText>Did the user select: Opt into emails about new features and other CommCare updates.</inlineHelpText>
        <label>HubSpot - Opt Into Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Persona__c</fullName>
        <description>A contact&apos;s persona</description>
        <inlineHelpText>A contact&apos;s persona</inlineHelpText>
        <label>HubSpot - Persona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>persona_1</fullName>
                </value>
                <value>
                    <fullName>persona_3</fullName>
                </value>
                <value>
                    <fullName>persona_5</fullName>
                </value>
                <value>
                    <fullName>persona_6</fullName>
                </value>
                <value>
                    <fullName>persona_8</fullName>
                </value>
                <value>
                    <fullName>persona_9</fullName>
                </value>
                <value>
                    <fullName>persona_10</fullName>
                </value>
                <value>
                    <fullName>persona_11</fullName>
                </value>
                <value>
                    <fullName>persona_12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Recent_Conversion_Date__c</fullName>
        <description>The date this contact last submitted a form</description>
        <inlineHelpText>The date this contact last submitted a form</inlineHelpText>
        <label>HubSpot - Recent Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HubSpot_Sends_Since_Last_Engagement__c</fullName>
        <description>This property tracks how many marketing emails have been sent to a contact from when they last engaged with an email. If the contact has never engaged with an email, this property will track the number of marketing emails they have been sent.</description>
        <inlineHelpText>This property tracks how many marketing emails have been sent to a contact from when they last engaged with an email. If the contact has never engaged with an email, this property will track the number of marketing emails they have been sent.</inlineHelpText>
        <label>HubSpot - Sends Since Last Engagement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_UTM_Campaign__c</fullName>
        <label>HubSpot - UTM_Campaign</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HubSpot_of_times_called_Phone_Test__c</fullName>
        <description># of times called as part of Create an Account phone number test.</description>
        <inlineHelpText># of times called as part of Create an Account phone number test.</inlineHelpText>
        <label>HubSpot - # of times called - Phone Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_score_Became_a_Customer__c</fullName>
        <description>The HS score of a customer.</description>
        <label>HubSpot score - Became a Customer</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_score_Became_a_Lead__c</fullName>
        <description>The HS score of a lead.</description>
        <label>HubSpot score - Became a Lead</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_score_Became_a_Sales_Qualified__c</fullName>
        <description>The HS score of an SQL.</description>
        <label>HubSpot score - Became a Sales Qualified</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_score_Became_a_WT_SQL_Bucket__c</fullName>
        <description>The HS score of an SQL at the time they became WT, grouped into High, Medium, or Low buckets to inform SDR qualification methods.</description>
        <inlineHelpText>The HS score of an SQL at the time they became WT, grouped into High, Medium, or Low buckets to inform SDR qualification methods.</inlineHelpText>
        <label>HubSpot score - Became a WT SQL - Bucket</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_score_Became_an_Opportunity__c</fullName>
        <description>The HS score of an Opportunity</description>
        <label>HubSpot score - Became an Opportunity</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpotscore_BecameaWTSQL__c</fullName>
        <description>The HubSpot score of an SQL at the time they became Working - Talking. Used to inform the qualification method.</description>
        <label>HubSpot score - Became a WT SQL</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_A_B__c</fullName>
        <description>Used for A/B testing. Set by HQ.</description>
        <inlineHelpText>Used for A/B testing. Set by HQ.</inlineHelpText>
        <label>Hubspot - A/B Test Variable #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Create_Date__c</fullName>
        <description>The date that a contact entered the system</description>
        <inlineHelpText>The date that a contact entered the system</inlineHelpText>
        <label>Hubspot - Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hubspot_Date_of_last_HQ_login__c</fullName>
        <description>Date of last login to CCHQ</description>
        <inlineHelpText>Date of last login to CCHQ</inlineHelpText>
        <label>Hubspot - Date of last HQ login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hubspot_First_Conversion_Clustered__c</fullName>
        <description>This is the grouping of the first conversion field in Hubspot to organize the conversion categories.</description>
        <inlineHelpText>This is the grouping of the first conversion field in Hubspot to organize the conversion categories.</inlineHelpText>
        <label>Hubspot - First Conversion [Clustered]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_First_Page_Seen__c</fullName>
        <description>The first page a contact saw on your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The first page a contact saw on your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Hubspot - First Page Seen</label>
        <length>2083</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hubspot_First_conversion__c</fullName>
        <description>The first form this contact submitted</description>
        <inlineHelpText>The first form this contact submitted</inlineHelpText>
        <label>Hubspot - First conversion</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hubspot_First_conversion_date__c</fullName>
        <description>The date this contact first submitted a form</description>
        <inlineHelpText>The date this contact first submitted a form</inlineHelpText>
        <label>Hubspot - First conversion date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hubspot_HQ_created_account_date__c</fullName>
        <description>Date on which this contact first created an account on HQ</description>
        <inlineHelpText>Date on which this contact first created an account on HQ</inlineHelpText>
        <label>Hubspot - HQ created account date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hubspot_LIfecycle_Stage__c</fullName>
        <description>This is mapped to the Hubspot lifecycle stage. Note that you CANNOT rollback a stage to a previous stage.

This should probably be edited only rarely, as this integration is automated. The primary time you would edit this field is when a Lead is considered to be a Sales Qualified Lead by some action taken outside of the Hubspot system and needs to be reflected in Salesforce. Example: A lead emails you directly and says that they are interested in CommCare and have budget, resulting in a qualified sales lead. Then you would mark this field as SQL.</description>
        <label>Hubspot LIfecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_Last_activity_date__c</fullName>
        <description>Automatically filled by Hubspot. This is different from the SF field called LAst activity date. This Hubspot field gives the day of the last call/email/note logged into the contact record. With our current process, this only refers to calls</description>
        <inlineHelpText>Automatically filled by Hubspot. This is different from the SF field called LAst activity date. This Hubspot field gives the day of the last call/email/note logged into the contact record. With our current process, this only refers to calls</inlineHelpText>
        <label>Hubspot - Last activity date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hubspot_Last_reborn_SQL_date__c</fullName>
        <description>When an SQL goes through the sales process more than once, this field will get updated with the last date that the SQL became an SQL.</description>
        <inlineHelpText>When an SQL goes through the sales process more than once, this field will get updated with the last date that the SQL became an SQL.</inlineHelpText>
        <label>Hubspot - Last reborn SQL date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hubspot_Lead_Score_bucketed__c</fullName>
        <formula>IF( Hubspot__c &gt;=20, &quot;1-Very high&quot;, 
If (Hubspot__c&gt;=7, &quot;2-High&quot;,
If(Hubspot__c&gt;=-10, &quot;3-Medium&quot;,
If (Hubspot__c&gt;=-30, &quot;4-Low&quot;,
If (Hubspot__c&gt;=-50, &quot;5-Very low&quot;,
&quot;6-Lowest&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hubspot - Lead Score bucketed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Max_Edition_of_Paying_Plan__c</fullName>
        <description>This is the highest paid plan on every domain that this user is a member of. For example, they are a member of 2 community projects spaces, a Pro project space and an Advanced - this field would be Advanced.</description>
        <inlineHelpText>This is the highest paid plan on every domain that this user is a member of. For example, they are a member of 2 community projects spaces, a Pro project space and an Advanced - this field would be Advanced.</inlineHelpText>
        <label>Hubspot - Max Edition of Paying Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Max_form_submissions_domain__c</fullName>
        <description>This the maximum number of form submissions for any domain the user is a member of.</description>
        <label>Hubspot - Max form submissions, domain</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Max_mobile_workers_in_a_domain__c</fullName>
        <description>The maximum number of mobile workers for any domain the user is a member of.</description>
        <label>Hubspot - Max mobile workers in a domain</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_New_user_Accepted_domain__c</fullName>
        <description>Hubspot - New user Accepted domain invitation</description>
        <inlineHelpText>Hubspot - New user Accepted domain invitation</inlineHelpText>
        <label>Hubspot - New user Accepted d. inv</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Next_Activity_Date__c</fullName>
        <description>The next activity date from Hubspot. Oddly enough, this is a text field in Husbpot.</description>
        <inlineHelpText>The next activity date from Hubspot. Oddly enough, this is a text field in Husbpot.</inlineHelpText>
        <label>Hubspot - Next Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hubspot_Number_of_form_submissions__c</fullName>
        <description>This is a field from Hubspot showing total form submissions (Hubspot forms, not HQ forms)</description>
        <label>Hubspot - # of Hubspot forms submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Original_Source_Drill_Down_1__c</fullName>
        <description>Additional information about the source through which a contact first found your website. This property is automatically set by HubSpot.</description>
        <inlineHelpText>Additional information about the source through which a contact first found your website. This property is automatically set by HubSpot.</inlineHelpText>
        <label>Hubspot - Original Source Drill-Down 1</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hubspot_Original_Source_Drill_Down_2__c</fullName>
        <description>Additional information about the source through which a contact first found your website. This property is automatically set by HubSpot.</description>
        <inlineHelpText>Additional information about the source through which a contact first found your website. This property is automatically set by HubSpot.</inlineHelpText>
        <label>Hubspot - Original Source Drill-Down 2</label>
        <length>36000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hubspot_Original_source__c</fullName>
        <description>The first known source through which a contact found your website. Source is automatically set by HubSpot.</description>
        <inlineHelpText>The first known source through which a contact found your website. Source is automatically set by HubSpot.</inlineHelpText>
        <label>Hubspot - Original source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Project_Spaces_List__c</fullName>
        <description>List of project spaces from Hubspot.</description>
        <inlineHelpText>List of project spaces from Hubspot.</inlineHelpText>
        <label>Hubspot - Project Spaces List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hubspot_SQL_qualifying_actions__c</fullName>
        <label>Hubspot - SQL qualifying actions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visited pricing page at least twice</fullName>
                </value>
                <value>
                    <fullName>Contacted us</fullName>
                </value>
                <value>
                    <fullName>Attended an event</fullName>
                </value>
                <value>
                    <fullName>On domain that submitted &gt;=1 HQ form</fullName>
                </value>
                <value>
                    <fullName>Reborn SQL created new project space</fullName>
                </value>
                <value>
                    <fullName>Invited to domain &gt;=1 HQ form submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_SQL_reason__c</fullName>
        <label>Hubspot - SQL reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hubspot_Time_first_seen__c</fullName>
        <description>The first time a contact has been seen. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The first time a contact has been seen. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Hubspot - Time first seen</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hubspot_Time_of_first_visit__c</fullName>
        <description>The first time a contact visited your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The first time a contact visited your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Hubspot - Time of first visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hubspot_Time_to_First_Attempt_on_Phone__c</fullName>
        <description>This indicates how much time has passed before we were able to get on the phone with someone.</description>
        <inlineHelpText>This indicates how much time has passed before we were able to get on the phone with someone.</inlineHelpText>
        <label>Hubspot - Time to First Attempt on Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 30 minutes</fullName>
                </value>
                <value>
                    <fullName>&lt; 1 hour</fullName>
                </value>
                <value>
                    <fullName>&lt; 2 hours</fullName>
                </value>
                <value>
                    <fullName>&lt; 5 hours</fullName>
                </value>
                <value>
                    <fullName>&lt;12 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 day</fullName>
                </value>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_User_Accepted_domain_invitatio__c</fullName>
        <description>Hubspot - User Accepted domain invitation</description>
        <inlineHelpText>Hubspot - User Accepted domain invitation</inlineHelpText>
        <label>Hubspot - User Accepted domain invit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot__c</fullName>
        <description>The number that shows qualification of contacts to sales readiness. It can be set in HubSpot&apos;s Lead Scoring app.</description>
        <inlineHelpText>The number that shows qualification of contacts to sales readiness. It can be set in HubSpot&apos;s Lead Scoring app.</inlineHelpText>
        <label>Hubspot - Hubspot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Potentially interested in Implementation Services</description>
        <inlineHelpText>Potentially interested in Implementation Services</inlineHelpText>
        <label>Implementation Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Email_Count__c</fullName>
        <label>Individual Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Candidate__c</fullName>
        <description>Equals True if the lead is recognized by the Greenhouse-Hubspot integration as a job candidate (registered in Greenhouse for a job). Equals to &quot;&quot; otherwise</description>
        <inlineHelpText>Equals True if the lead is recognized by the Greenhouse-Hubspot integration as a job candidate (registered in Greenhouse for a job). Equals to &quot;&quot; otherwise</inlineHelpText>
        <label>Job Candidate</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_call_date_scheduled__c</fullName>
        <description>Populated by a Salesforce Workflow, giving this field the value of the Next Activity date, each time the Next activity date changes</description>
        <inlineHelpText>Populated by a Salesforce Workflow, giving this field the value of the Next Activity date, each time the Next activity date changes</inlineHelpText>
        <label>Latest call date scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_day_qualifying_process_failed__c</fullName>
        <description>Created through hubspot workflow</description>
        <inlineHelpText>Created through hubspot workflow</inlineHelpText>
        <label>Latest day qualifying process failed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_value_of_Days_without_activity__c</fullName>
        <description>Is automatically populated with the latest value of the formula field &quot;Days without activity&quot;, thanks to a SF workflow. Only helpful to automatically triggers the sync between SF and Hubspot (For QA Dashboard)</description>
        <inlineHelpText>Is automatically populated with the latest value of the formula field &quot;Days without activity&quot;, thanks to a SF workflow. Only helpful to automatically triggers the sync between SF and Hubspot (For QA Dashboard)</inlineHelpText>
        <label>Latest value of days w/o activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadCount__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadCounter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadCounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Initiative__c</fullName>
        <description>Select why you have gathered this lead.  If you are doing research for potential partners for a funding opp, select RFP Partner explore, etc.</description>
        <label>Lead Gen Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Hit List</fullName>
                </value>
                <value>
                    <fullName>RFP Partner Explore</fullName>
                </value>
                <value>
                    <fullName>Sub Sector Research</fullName>
                </value>
                <value>
                    <fullName>Country Research</fullName>
                </value>
                <value>
                    <fullName>University Research</fullName>
                </value>
                <value>
                    <fullName>General (no specific initiative)</fullName>
                </value>
                <value>
                    <fullName>Workshop Outreach</fullName>
                </value>
                <value>
                    <fullName>Awardee Outreach</fullName>
                </value>
                <value>
                    <fullName>Sector Specific Lead Gen</fullName>
                </value>
                <value>
                    <fullName>B2B Outbound Lead Gen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Owner_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Unit of the Lead Owner</description>
        <label>Business Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Unit__c.OwnerId</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <infoMessage>Looks up Lead Owner and returns Business Unit</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Drilldown__c</fullName>
        <description>This should be filled in if the Lead Source is marked as Inbound by Ryan because the Lead became SQLs by one of those 4 &quot;Lead Source- Drilldown&quot; options.</description>
        <inlineHelpText>To be filled in only if the lead became inbound by one of those 4 ways. Otherwise if the Lead source get automatically updated by Hubspot to be inbound, then this drilldown field should remain blank</inlineHelpText>
        <label>Lead Source - Drilldown</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound - Found us through Google Search</fullName>
                </value>
                <value>
                    <fullName>Inbound - Found us on Social Media</fullName>
                </value>
                <value>
                    <fullName>Inbound - Learnt about us on another website</fullName>
                </value>
                <value>
                    <fullName>Inbound - Learnt about us through an article</fullName>
                </value>
                <value>
                    <fullName>Inbound - Contacted us after seeing us at a conference</fullName>
                </value>
                <value>
                    <fullName>Inbound - Through Colleagues / Networking</fullName>
                </value>
                <value>
                    <fullName>Inbound - Colleagues/Networking</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_google_search__c</fullName>
        <description>Add any comments on which google search was performed (which keyword) if the user answers that they found us through Google Search</description>
        <inlineHelpText>Add any comments on which google search was performed (which keyword) if the user answers that they found us through Google Search</inlineHelpText>
        <label>Lead Source comment on google search</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Reason__c</fullName>
        <description>This field contains the list of reasons for selecting the lead status.</description>
        <inlineHelpText>Choose a reason that helps clarify the lead status.</inlineHelpText>
        <label>Lead Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted - Sent Email #1</fullName>
                </value>
                <value>
                    <fullName>Contacted - Sent Email #2</fullName>
                </value>
                <value>
                    <fullName>Contacted - Sent Email #3</fullName>
                </value>
                <value>
                    <fullName>Working - Exploratory Call - Trying for</fullName>
                </value>
                <value>
                    <fullName>Working - Exploratory Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Working - No show reminder #1</fullName>
                </value>
                <value>
                    <fullName>Working - No show reminder #2</fullName>
                </value>
                <value>
                    <fullName>Working - No show reminder #3</fullName>
                </value>
                <value>
                    <fullName>Working - Nudge #1</fullName>
                </value>
                <value>
                    <fullName>Working - Nudge #2</fullName>
                </value>
                <value>
                    <fullName>Working - Nudge #3</fullName>
                </value>
                <value>
                    <fullName>Working - Nudge #4</fullName>
                </value>
                <value>
                    <fullName>Incorrect or invalid email address</fullName>
                </value>
                <value>
                    <fullName>Recruiting / Hiring</fullName>
                </value>
                <value>
                    <fullName>Stopped responding</fullName>
                </value>
                <value>
                    <fullName>Opportunity identified but timeline &gt; 6 months out</fullName>
                </value>
                <value>
                    <fullName>Existing client / project</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Email opt-out</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Partner program</fullName>
                </value>
                <value>
                    <fullName>No opportunity identified yet</fullName>
                </value>
                <value>
                    <fullName>Test email address</fullName>
                </value>
                <value>
                    <fullName>Speaking request / research</fullName>
                </value>
                <value>
                    <fullName>Contact information request</fullName>
                </value>
                <value>
                    <fullName>Decided to use another solution</fullName>
                </value>
                <value>
                    <fullName>Request for sponsorship</fullName>
                </value>
                <value>
                    <fullName>Invited user</fullName>
                </value>
                <value>
                    <fullName>Former Dimagier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>